// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #008539;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  aria-live="polite"
  class="NotificationItem NotificationItem--success"
  data-intent="success"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    success
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--success"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="emotion-2 IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="IconButton__icon emotion-1"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with "error" intent 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-1 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-0 {
  display: inline-block;
  fill: #DA294A;
  height: 18px;
  width: 18px;
}

<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--error"
  data-intent="error"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    error
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--error"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="emotion-2 IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="IconButton__icon emotion-1"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with "warning" intent 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-1 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-0 {
  display: inline-block;
  fill: #F07F23;
  height: 18px;
  width: 18px;
}

<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--warning"
  data-intent="warning"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    warning
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--warning"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="emotion-2 IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="IconButton__icon emotion-1"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with a cta 1`] = `
.emotion-3 {
  display: inherit;
  outline: 0;
}

.emotion-2 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-0 {
  display: inline-block;
  fill: #F07F23;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  white-space: normal;
  text-align: left;
  cursor: pointer;
  opacity: 1;
  color: #0059C8;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #0041AB;
}

.emotion-1:focus,
.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #98CBFF;
  outline: none;
  border-radius: 4px;
}

<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--warning"
  data-intent="warning"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    warning
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--warning"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        This is the body text.
      </h2>
      <p
        class="NotificationItem__body"
      />
      <div>
        <button
          class="emotion-1"
          type="button"
        >
          <span>
            This is some label text
          </span>
        </button>
      </div>
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="emotion-3 IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="IconButton__icon emotion-2"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with a title and a body 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #008539;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  aria-live="polite"
  class="NotificationItem NotificationItem--success"
  data-intent="success"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    success
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--success"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification title
      </h2>
      <p
        class="NotificationItem__body"
      >
        This is the body text.
      </p>
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="emotion-2 IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="IconButton__icon emotion-1"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;
